@@ -20,7 +20,7 @@ KeepInstalledPkgs=gnumeric, gnumeric-gtk, hpijs
 KeepInstalledSection=translations
 #PostInstallScripts=./apt-autoinst-fixup.py
 RemoveObsoletes=yes
-ForcedObsoletes=esound, esound-common, slocate
+ForcedObsoletes=esound, esound-common, slocate, ksplash-engine-moodin
 
 # information about the individual meta-pkgs
 [ubuntu-desktop]
